sugar/tests/fail/par.mx
a : 1 |- connect a via
    { u -> u
    ; v -> v
    }
